css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;

  font: normal 100%/1.3 Georgia, serif;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;

  background-color: #cccc;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

.img-flex {
  width: 100%;
  display: block;
}

h1 {
  font-family: 'Pacifico', cursive;
  font-size: 2.2rem;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  display: block;
}

.banner {
  max-height: 500px;
  overflow: hidden;
  position: relative;
}

ul li {
  list-style-type: none;
  width: 100%;
}

ul a {
  color: #fff;
  display: block;
  text-decoration: none;
  font-size: 1.125rem;
  padding: .75rem;
  background-color: #333;
}

ul {
  padding: 0;
  margin: 0;
}

.nav a:hover {
  background-color: #ff33cc;
}

h2 {
  font-family: 'Pacifico', cursive;
  margin: .5rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #333;

}

.try {
  background-color: #fff;
  padding: .7rem;
  border-radius: .7rem;
}

main {
  margin: .5rem;
}

h3 {
  font-family: 'Pacifico', cursive;
  color: #333;
  font-size: 1.5rem;
  margin: .5rem;
  margin-top: 1.5rem;
}

.ingredients {
  list-style-type: circle;
}

.makers {
  text-align: center;
}

.img-ingredients1,
.img-ingredients2 {
  width: 50%;
  display: inline-block;
  float: left;
}

.button {
  text-align: center;
}

.button a {
  margin: 1rem;
  text-decoration: none;
  border-style: solid;
  border-width: 3px;
  border-radius: 8px;
  padding: .4em .75em .3em;
  display: inline-block;
  font-size: 1.125rem;
}

.order {
  background-color: #333;
  color: #fff;
  border-color: #333;
  display: inline-block;
}

.button a:hover {
  background-color: #ff33cc;
  border-color: #ff33cc;
}

img {
  padding-bottom: 3rem;
}

@media only screen and (min-width: 25em) {

  html {
    font-size: 100%;
    line-height: 1.3;
  }

  h1,
  p {
    margin: 0 0 1.3rem;
  }

  ul li {
    width: 50%;
    float: left;
  }

  ul {
    text-align: center;
  }

  .nav {
    overflow: hidden;
  }

  p {
    max-width: 25em;
  }



  }
  }
/**fix h2 main **/
}

